Added issues and started to sync

--- a/html-plan.html
+++ b/html-plan.html
@@ -39,7 +39,7 @@
 
 <h2 id='incubating'>Incubating new ideas</h2>
 
-<p>There is one Community Group, called the <a href="incubator-cg-charter.html"><strong>Web Platform Incubator</strong> Community Group</a> (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.</p>
+<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.</p>
 <p>
 The W3C Team and Leadership of the Community and Working Groups should ensure proper transitioning of ideas towards the standardization track, while also ensuring proper continuity in participation.
 </p>
@@ -52,6 +52,8 @@ The W3C Team and Leadership of the Community and Working Groups should ensure pr
 <p>Supporters of the proposal should perform an &quot;<em><a href='request-to-transition.html'>Request to Transition</a></em>&quot; assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalization impacts. It is the role of the proper Working Group (HTML, CSS, WebApps, etc.) to evaluate such assessment before starting a standardization effort.</p>
 
 <h2 id='efficent'>Efficient data-driven standards work</h2>
+
+<p>(see <a href='https://github.com/w3c/charter-html/issues/14'>issue 14</a>)</p>
 
 <p>
 The goal of  the <strong>HTML Working Group</strong> is to continue the development of the HTML language. As such, it will continue to maintain and produce incremental revisions to the HTML specification and its extensions, and drive interoperability of implementations.
@@ -109,8 +111,9 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 
 <h3 id='browsers'>Browser engines meeting</h3>
 
+<p>(see <a href='https://github.com/w3c/charter-html/issues/10'>issue 10</a>)</p>
 <p>
-  To ensure proper focus and prioritization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quarterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and summary of those meetings will be made available to the W3C Membership.
+  To ensure proper focus and prioritarization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quarterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and minutes of those meetings will be made publicly available.
 </p>
 
 <h2 id='datadriven'>Data-Driven Group</h2>
