reverted some unexpected changes

--- a/html-plan.html
+++ b/html-plan.html
@@ -39,7 +39,7 @@
 
 <h2 id='incubating'>Incubating new ideas</h2>
 
-<p>There is one Community Group, called the <strong>Web Platform Incubator</strong> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.</p>
+<p>There is one Community Group, called the <a href="incubator-cg-charter.html"><strong>Web Platform Incubator</strong></a> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.</p>
 <p>
 The W3C Team and Leadership of the Community and Working Groups should ensure proper transitioning of ideas towards the standardization track, while also ensuring proper continuity in participation.
 </p>
@@ -113,7 +113,7 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 
 <p>(see <a href='https://github.com/w3c/charter-html/issues/10'>issue 10</a>)</p>
 <p>
-  To ensure proper focus and prioritarization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quarterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and minutes of those meetings will be made publicly available.
+  To ensure proper focus and prioritization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quarterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and minutes of those meetings will be made publicly available.
 </p>
 
 <h2 id='datadriven'>Data-Driven Group</h2>
