Note this doc is a WIP
Add a note this document is a WIP and include information at the top about how to provide feedback.

--- a/html-plan.html
+++ b/html-plan.html
@@ -26,6 +26,14 @@
 </head>
 <body>
 
+<h1 id="warning">NOTE: This document is a <em>Work In Progress Proposal</em> and thus 
+  is subject to change at any time. Feedback on this document is welcome 
+  and encouraged by using this project's 
+  <a href="https://github.com/w3c/charter-html/issues">Github Issues</a> and/or by sending e-mail to the 
+  <em>public-html-admin</em> mail list 
+  <a href="https://lists.w3.org/Archives/Public/public-html-admin/">(archive)</a>.
+</h1>
+
 <h1>Achieving maintenance and future progress of HTML</h1>
 <p>The goal of this plan is to improve the tone and participation at W3C so that we achieve interoperability around HTML and continue to enhance the specification.</p>
 
