--- a/request-to-transition.html
+++ b/request-to-transition.html
@@ -34,34 +34,38 @@
 <p id='contact'><strong>Supporter emails</strong></p>
 
 <p>&nbsp; example@example.com, example2@example.com&nbsp;</p>
-
+<p><input type="email" name="supporter1"></p>
+<!-- add an 'add email' button? Or more fields? or ??? -->
 <p id='proposal'><strong>Proposal</strong></p>
 
 <p>Link to proposal (preferably in a github repository).&nbsp; You should have at least an unofficial proposal in hand and&#x2F;or have discussed the API within the HTML Incubator Community Group before sending an intent to standardize.&nbsp; If your proposal is not yet at this stage of maturity, feel free to solicit feedback informally on discourse instead. You may be asked to create a github repository if there isn&#x27;t one.</p>
-
+<p><input type="url"></input></p>
 <p id='summary'><strong>Summary</strong></p>
 
 <p>Give a high-level description of your proposal.</p>
+<p><textarea cols="72" name="Description"></textarea></p>
 
 <p id='motivation'><strong>Motivation and Use Cases</strong></p>
 
-<p>Explain why the web needs this change.&nbsp; It may be useful to describe what web developers are forced to do without it.&nbsp; Include links to back up your claims, including data.</p>
+<p>Explain why the web needs this change. It may be useful to describe what web developers are forced to do without it.&nbsp; Include links to back up your claims, including data.</p>
+<p><textarea cols="72" name="Rationale"></textarea></p>
 
 <p id='risk'><strong>Compatibility Risk</strong></p>
 
-<p>Please characterize how much we might regret standardizing this new feature were we might to change or remove it in the future. If you don&#8217;t have a github repository, include in this email links to relevant discussions, or documentation about support for the feature on the Web.</p>
+<p>Explain what will happen if we standardize this feature, then significantly change or remove it in the future.</p>
+<p><textarea cols="72" name="CompatibilityRisks"></textarea></p>
 
 <p id='constraints'><strong>Ongoing technical constraints</strong></p>
 
-<p>Do you anticipate adding any ongoing technical constraints to the deployed user agents while implementing this feature?</p>
-
+<p>What technical constraints will be added to user agents implementing this feature?</p>
+<p><textarea cols="72" name="NewConstraints"></textarea></p>
 <p id='device_independence'><strong>Will this feature be supported in all environments (desktop, mobile, tablets, TV, eBooks, automotive, etc.)?</strong></p>
 
 <p>Yes or no.&nbsp; If no, explain why certain user agents will not be included in your implementation.</p>
 
 <p id='implementations'><strong>Link to implementation experience and demos</strong></p>
 
-<p>If your proposal has implementation experience or demos, please provide links to those. This includes common patterns in deployed libraries. Otherwise, indicate if there isn&#x27;t none.</p>
+<p>If your proposal has implementation experience or demos, please provide links, including patterns in deployed libraries.</p>
 
 <p id='data'><strong>Data</strong></p>
 
@@ -69,15 +73,17 @@
 
 <p id='security'><strong>Security and Privacy</strong></p>
 
-<p>Outline the <a href='https://w3ctag.github.io/security-questionnaire/'>security and privacy implications</a> of your proposal for end-users. Otherwise, indicate if there are none.</p>
-
+<p>Outline the <a href='https://w3ctag.github.io/security-questionnaire/'>security and privacy implications</a> of your proposal for end-users.</p>
+<p><textarea cols="72"  name="SecurityPrivacy"></textarea></p>
 <p id='a11y'><strong>Accessibility</strong></p>
 
-<p>Outline the <a href='https://github.com/stevefaulkner/accessibility-spec-questionnaire/blob/master/accessibility-spec-questionnaire.md'>implications of your proposal</a> relative to access by everyone regardless of disability. Otherwise, indicate if there are none.</p>
+<p>Outline the <a href='https://github.com/stevefaulkner/accessibility-spec-questionnaire/blob/master/accessibility-spec-questionnaire.md'>implications of your proposal</a> for access by everyone regardless of disability.</p>
+<p><textarea cols="72" name="Accessibility"></textarea></p>
 
 <p id='i18n'><strong>Internationalization</strong></p>
 
-<p>Outline the implications of your proposal when used with different languages, scripts, and cultures. Otherwise, indicate if there are none.</p>
+<p>Outline the implications of your proposal when used with different languages, scripts, and cultures.</p>
+<p><textarea cols="72"  name="i18n"></textarea></p>
 
 <p>(this form was largely inspired from Blink <a href='https://docs.google.com/a/chromium.org/document/d/1vlTlsQKThwaX0-lj_iZbVTzyqY7LioqERU8DK3u3XjI/edit#bookmark=id.uptkx07pm53s'>Intent to Implement and Ship templates</a>)</p>
 
