--- a/html-plan.html
+++ b/html-plan.html
@@ -120,7 +120,7 @@ See also <a href='https://specs.webplatform.org/docs/'>Web Platform Specs</a>. T
 <h3 id='browsers'>Browser engines meeting</h3>
 
 <p>(see <a href='https://github.com/w3c/charter-html/issues/10'>issue 10</a>)</p>
-<p><strong>Note:</strong> This section is somewhat orthogonal to the proposal and will probably be remove in the future.</p>
+<p><strong>Note:</strong> This section is somewhat orthogonal to the proposal and will probably be removed in the future.</p>
 <p>
   To ensure proper focus and prioritization, the W3C Team will ensure proper sychronization of vendor interests. As such, the W3C Team will hold quarterly meetings with those with authority over what gets committed to a consumer browser engine codebase. The scheduling, agenda, and minutes of those meetings will be made publicly available.
 </p>
