request to transition

--- a/request-to-transition.html
+++ b/request-to-transition.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-  <title>Request to standardize</title>
+  <title>Request to transition</title>
   <meta charset='utf-8'>
   <meta name=viewport content='width=device-width'>
   <link rel=stylesheet href='https://www.w3.org/StyleSheets/TR/base'>
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-<h1><strong>Request to Standardize</strong>: &lt;feature name or short change description&gt;</h1>
+<h1><strong>Request to Transition</strong>: &lt;feature name or short change description&gt;</h1>
 
 <h2>Body:</h2>
 
