--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -34,7 +34,7 @@
 
 <p>As proposals gain support and become more stable and mature they will be considered for migration to a W3C Working Group where they can be put on the Recommendation track with appropriate status and Intellectual Property (IP) considerations.</p>
 
-<p>Individuals, after consultation with the Chairs, may prepare a "<a href="request-to-transition.html">request to transition</a>" assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalisation impacts. Those requests are evaluated within the Community Group as well the targeted W3C Working Group, if any.  The role of the CG and WG Chairs and W3C team is to facilitate the migration and ensure proper continuity in the community who proposed the idea.</p>
+<p>Individuals, after consultation with the Chairs, may prepare a "<a href="request-to-transition.html">intent to migrate</a>" assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalisation impacts. Those requests are evaluated within the Community Group as well the targeted W3C Working Group, if any.  The role of the CG and WG Chairs and W3C team is to facilitate the migration and ensure proper continuity in the community who proposed the idea.</p>
 
 <h2 id="background">Background</h2>
 
