Disagreers are encouraged to fork #21

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -111,7 +111,8 @@
 
 <p>It is the Chairs' responsibility to ensure that the decision process is fair, respects the consensus of the CG, and does not unreasonably favour or discriminate against any group participant or their employer. With that said, the group favours forward motion and dissent will not be allowed to block work on a spec.</p>
 
-<p>If substantial disagreement remains (e.g. the group is divided), the editors will continue with their preference. The issue should be recorded as decided without consensus. In extreme cases, someone may choose to fork the spec into a new GitHub repo and move forward with alternative text. This is explicitly allowed (and preferred to blocking progress) with a goal of letting implementation experience inform which spec is ultimately chosen by the group to move ahead with.</p>
+<p>If substantial disagreement remains (e.g. the group is divided), the editors will continue with their preference. The issue should be recorded as decided without consensus. Individuals who disagree with the editor's choice are strongly encouraged to take
+ownership of their objection by taking ownership of an alternative fork. This is explicitly allowed (and preferred to blocking progress) with a goal of letting implementation experience inform which spec is ultimately chosen by the group to move ahead with.</p>
 
 <h2 id="transparency">Transparency</h2>
 
