Added a CG considerations section

--- a/html-plan.html
+++ b/html-plan.html
@@ -45,6 +45,8 @@
 <li>Maintenance (aka actual interoperability)</li>
 </ol>
 
+<p>This plan proposes to create one Community Group to incubate ideas, and reshape the Working Groups to achieve interoperability.</p>
+
 <h2 id='incubating'>Incubating new ideas</h2>
 
 <p>There is one Community Group, called the <a href="incubator-cg-charter.html"><strong>Web Platform Incubator</strong></a> Community Group (Web Platform ICG). Its mission is to attract, foster, and incubate ideas and proposals around the Web Platform, by facilitating communication with developers at large or by using data-driven metrics to identify common patterns that warrant first class support in the Web Platform. If the Web Platform ICG works with consensus, it will significantly reduce the effort to transition from CG to W3C Recommendation.</p>
@@ -58,6 +60,23 @@ The W3C Team and Leadership of the Community and Working Groups should ensure pr
 <p>Once a proposal becomes mature enough to justify formal standardization, it becomes the mission and responsibility of a Working Group to ensure proper acceptance, through consensus, wide reviews, <a href='#footnote1'>data-driven</a> analysis, and technical merit. A proposal may become ready for standardization efforts because of implementation experience or broad support.
 
 <p>Supporters of the proposal should perform an &quot;<em><a href='request-to-transition.html'>Intent to Migrate</a></em>&quot; assessment, outlining use cases, as well as implementation considerations, security, privacy, accessibility, and internationalization impacts. It is the role of the proper Working Group (HTML, CSS, WebApps, etc.) to evaluate such assessment before starting a standardization effort.</p>
+
+<h3 id="steps">CG Considerations</h3>
+
+<p>Contributions will be need to be tracked to ensure proper commitments. As such, we'll need the following setup:</p>
+
+<ul>
+<li>Map the GitHub identities to the W3C identities</li>
+<li>Ensure people making comments/pull requests are aware of the IPR commitment they are making, such as appropriate <a href='https://github.com/w3c/web-nfc/blob/gh-pages/CONTRIBUTING.md'>CONTRIBUTING</a> and <a href='https://github.com/w3c/web-nfc/blob/gh-pages/LICENSE.md'>LICENSE</a> disclaimers</li>
+<li>All contributors to a commit or a pull request (PR) should be identified, not just the individual who made the commit or PR.</li>
+<!--
+@@check with Mike Champion
+<li>Tooling to assist W3C Members who may wish their employees to participate in some but not all the GitHub repos affiliated with a CG</li>
+-->
+<li>Tools to help W3C Members track which affiliated GitHub repos their employees are contributing to</li>
+<li>Encouraging to get broad patent commitments on a spec via a Final Specification Agreement as part of an intent to migrate to a Working Group</li>
+<li>Generate weekly activity reports from the Github repos</li>
+</ul>
 
 <h2 id='efficent'>Efficient data-driven standards work</h2>
 
