Added automatic flag for PR based on contributors

--- a/html-plan.html
+++ b/html-plan.html
@@ -68,7 +68,7 @@ The W3C Team and Leadership of the Community and Working Groups should ensure pr
 <ul>
 <li>Map the GitHub identities to the W3C identities</li>
 <li>Ensure people making comments/pull requests are aware of the IPR commitment they are making, such as appropriate <a href='https://github.com/w3c/web-nfc/blob/gh-pages/CONTRIBUTING.md'>CONTRIBUTING</a> and <a href='https://github.com/w3c/web-nfc/blob/gh-pages/LICENSE.md'>LICENSE</a> disclaimers</li>
-<li>All contributors to a commit or a pull request (PR) should be identified, not just the individual who made the commit or PR.</li>
+<li>All contributors to a commit or a pull request (PR) should be identified, not just the individual who made the commit or PR. A tool will flag if a pull request should be merged depending on its contributors</li>
 <!--
 @@check with Mike Champion
 <li>Tooling to assist W3C Members who may wish their employees to participate in some but not all the GitHub repos affiliated with a CG</li>
