Added a note on not using contrib list #29

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -91,6 +91,8 @@
 
 <p>The Community Group mailing list must not be used for discussing details of specific projects.</p>
 
+<p>Note: this CG will not use a contrib mailing list for contributions since all contributions will be tracked via Github mechanisms (e.g. pull requests).</p>
+
 <h2 id="chairs">Chair Selection</h2>
 
 <p><em>This section comes from the <a href="https://www.w3.org/community/council/wiki/Templates/CG_Charter">CG template</a>. It may not be the most appropriate text but is left as a starting point for discussion.</em></p>
