Clarified the goal of CG work in GH repos.

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -120,7 +120,9 @@ ownership of their objection by taking ownership of an alternative fork. This is
 
 <h2 id="transparency">Transparency</h2>
 
-<p>The group will conduct all of its technical work on its GitHub repository. Any decisions reached at any meeting are tentative and should be recorded in the repo issues list. Any group participant may object to a decision reached at an online or in-person meeting within 7 days of publication of the decision provided that they include clear technical reasons for their objection. The Chairs will facilitate discussion to try to resolve the objection according to the <a href="#decision">decision process</a>.</p>
+<p>The group will conduct all of its technical work on its GitHub repositories (and not in mailing list discussions). This is to ensure contributions can be tracked and to ensure that engagement will scale to a large number of proposals.</p>
+
+<p>Any decisions reached at any meeting are tentative and should be recorded in the repo issues list. Any group participant may object to a decision reached at an online or in-person meeting within 7 days of publication of the decision provided that they include clear technical reasons for their objection. The Chairs will facilitate discussion to try to resolve the objection according to the <a href="#decision">decision process</a>.</p>
 
 </body>
 </html>
