Clarify CG growth para.

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -42,7 +42,7 @@
 
 <p>The goal of the WPI CG is to balance these two considerations. It should be as low friction as possible to make new proposals where participants make their contributions with known IP commitments.</p>
 
-<p>Over time, the WPI CG will grow to include all the people that have signed up for their contributions to be made according to the <a href="https://www.w3.org/community/about/agreements/cla/">W3C CG CLA</a>, much like an open source project grows a list of contributors making pull requests under the project license.</p>
+<p>Over time, the WPI CG will grow into a large community of people that have signed up for their contributions to be made according to the <a href="https://www.w3.org/community/about/agreements/cla/">W3C CG CLA</a>, much like an open source project grows a list of contributors making pull requests under the project license. The agreement only has to be accepted once and then contributions to any proposal in the CG are covered.</p>
 
 <p>Different organisations will have different internal policies for managing engagement in the WPI CG. Some will run internal processes before allowing their representatives to engage and make contributions to a particular proposal. Others allow contributions to any proposal according to standing policies. It is up to each organisation to determine how to manage this.</p>
 
