Fixed contrib list note

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -85,15 +85,13 @@
 
 <p>Terms of in this charter that conflict with those of the <a href="https://www.w3.org/community/about/agreements/">Community and Business Group Process</a> are void.</p>
 
-<p>Note: this CG will not use a <em></em>contrib</em> e-mail list for contributions since all contributions will be tracked via Github mechanisms (f.ex. pull requests).</p>
+<p>Note: this CG will not use a <em>contrib</em> mailing list for contributions since all contributions will be tracked via Github mechanisms (e.g. pull requests).</p>
 
 <h2 id="contrib">Contribution Mechanics</h2>
 
 <p>Community Group participants agree to make contributions in the GitHub repo for the project that they are interested in. This may be in the form of a pull request (preferred), by raising an issue, or by adding a comment to an existing issue.</p>
 
 <p>The Community Group mailing list must not be used for discussing details of specific projects.</p>
-
-<p>Note: this CG will not use a contrib mailing list for contributions since all contributions will be tracked via Github mechanisms (e.g. pull requests).</p>
 
 <h2 id="chairs">Chair Selection</h2>
 
