Added GitHub repo creation note

--- a/html-plan.html
+++ b/html-plan.html
@@ -67,6 +67,7 @@ The W3C Team and Leadership of the Community and Working Groups should ensure pr
 
 <ul>
 <li>Map the GitHub identities to the W3C identities</li>
+<li>Facilitate the creation of a GitHub repository for the purpose of fostering a proposal</li>
 <li>Ensure people making comments/pull requests are aware of the IPR commitment they are making, such as appropriate <a href='https://github.com/w3c/web-nfc/blob/gh-pages/CONTRIBUTING.md'>CONTRIBUTING</a> and <a href='https://github.com/w3c/web-nfc/blob/gh-pages/LICENSE.md'>LICENSE</a> disclaimers</li>
 <li>All contributors to a commit or a pull request (PR) should be identified, not just the individual who made the commit or PR. A tool will flag if a pull request should be merged depending on its contributors</li>
 <!--
