Add reference to sw/doc license for issue #26

--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -24,7 +24,7 @@
 <dl>
  <dt>This Charter:</dt><dd><a href="http://w3c.github.io/charter-html/incubator-cg-charter.html">http://w3c.github.io/charter-html/incubator-cg-charter.html</a></dd>
  <dt>Start Date:</dt><dd>1 July 2015</dd>
- <dt>Last Modified:</dt><dd>12 May 2015</dd>
+ <dt>Last Modified:</dt><dd>5 June 2015</dd>
  <dt>Status</dt><dd>This document is a work in progress based on the original proposal <a href="http://github.adrianba.net/webstandards/incubator-cg-charter">here</a>. Please raise <a href="https://github.com/w3c/charter-html/issues">issues</a> with feedback.</dd>
 </dl>
 
@@ -92,6 +92,8 @@
 <p>Community Group participants agree to make contributions in the GitHub repo for the project that they are interested in. This may be in the form of a pull request (preferred), by raising an issue, or by adding a comment to an existing issue.</p>
 
 <p>The Community Group mailing list must not be used for discussing details of specific projects.</p>
+
+<p>Specifications created for proposals in the Community Group must use the <a href="http://www.w3.org/Consortium/Legal/2015/copyright-software-and-document">W3C Software and Document License</a>.</p>
 
 <h2 id="chairs">Chair Selection</h2>
 
