--- a/incubator-cg-charter.html
+++ b/incubator-cg-charter.html
@@ -30,7 +30,7 @@
 
 <h2 id="goals">Goals</h2>
 
-<p>The Web Platform Incubator Community Group (WPI CG) provides a lightweight venue for proposing and discussing new web platform features. Each proposal will be discussed in its own GitHub repository. Membership of the group is open to everybody but all participants will have signed the <a href="https://www.w3.org/community/about/agreements/cla/">W3C Community Contributor License Agreement</a>.</p>
+<p>The Web Platform Incubator Community Group (WPI CG) provides a lightweight venue for proposing and discussing new web platform features. Each proposal will be discussed in its own repository within the group's Github account. Membership of the group is open to everybody but all participants will have signed the <a href="https://www.w3.org/community/about/agreements/cla/">W3C Community Contributor License Agreement</a>.</p>
 
 <p>As proposals gain support and become more stable and mature they will be considered for migration to a W3C Working Group where they can be put on the Recommendation track with appropriate status and Intellectual Property (IP) considerations.</p>
 
