--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -175,7 +175,7 @@
     	mailing list <a href="http://lists.w3.org/Archives/Public/public-timedmedia/">public-timedmedia@w3.org</a>.
       Administrative tasks may be conducted in Member-only communications as appropriate.
     	</p>
-      <p>The technical work of the working group is conducted through a W3C GitHub repositort for each specification. Participants are encouraged to provide, track, and pursue technical feedback through GitHub issues and not through the mailing list. This faciliates more structured communication and makes it possible to clearly signal when an issue is closed or reopened with new information.</p>
+      <p>The technical work of the working group is conducted through a W3C GitHub repository for each specification. Participants are encouraged to provide, track, and pursue technical feedback through GitHub issues and not through the mailing list. This faciliates more structured communication and makes it possible to clearly signal when an issue is closed or reopened with new information.</p>
     </div>
 
     <div class="decisions">
