Updated deliverables section to better frame the WG scope.

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -74,7 +74,7 @@
         <h2 id="deliverables">Deliverables</h2>
 
         <h3 id="rec-track">Recommendation-Track Deliverables</h3>
-        <p>The working group will deliver at least the following W3C Recommendations:</p>
+        <p>The working group will deliver the following W3C Recommendations:</p>
 
         <dl>
           <dt><a href="http://www.w3.org/TR/media-source/">Media Source Extensions</a></dt>
@@ -84,7 +84,7 @@
         </dl>
 
 	    <h3>Other Deliverables</h3>
-      <p>The Timed Media Working Group may publish other specifications that are within its scope. In particular, the group may produce specifications for the following features:</p>
+      <p>The Timed Media Working Group may produce specifications for the following features:</p>
 
       <dl>
         <dt>Transcript</dt>
@@ -99,7 +99,8 @@
         <dd>The Timed Media Working Group may coordinate work on secondary screen playback with the Second Screen Presentation Working Group.</dd>
       </dl>
   	
-	
+      <p>The Working Group may use the <a href="#">Web Platform Community Group</a> or other Community Groups to explore possible new work within its scope that is not covered in the deliverables above. If the Working Group decides to add new features or specifications to its deliverables, it will recharter with changes to that new charter limited to just changes in deliverables.</p>
+  	
 	    <h3 id="milestones">Milestones</h3>
 	    <table class="roadmap" width="80%"><caption>
 		Milestones
