Tweaks to WebApps charter

--- a/group-charter.html
+++ b/group-charter.html
@@ -44,6 +44,7 @@
         <li><a href="#communication">Communication</a></li>
         <li><a href="#decisions">Decision Policy</a></li>
         <li><a href="#patentpolicy">Patent Policy </a></li>
+        <li><a href="#licensing">Licensing</a></li>
         <li><a href="#about">About this Charter</a></li>
       </ul>
       <p><a href="http://www.w3.org/"><img width="72" height="48" src="http://www.w3.org/Icons/w3c_home"
@@ -52,7 +53,7 @@
             alt="Interaction Domain"
             src="http://www.w3.org/Icons/interaction" /></a>
       </p>
-      <h1 id="title">Web Applications Working Group Charter</h1>
+      <h1 id="title">[DRAFT] Web Applications Working Group Charter</h1>
 
       <p class="mission">The mission of the <a href="http://www.w3.org/2008/webapps/">Web
           Applications (WebApps) Working Group</a>, part of the <a href="http://www.w3.org/2006/rwc/">Rich
