--- a/group-charter.html
+++ b/group-charter.html
@@ -80,7 +80,7 @@
           </tr>
           <tr>
             <th colspan="1" rowspan="1">Chairs</th>
-            <td colspan="1" rowspan="1">Art Barstow, Charles McCathieNeville, Leonie Watson, Adrian Bateman</td>
+            <td colspan="1" rowspan="1">Art Barstow, Charles McCathie Nevile, Leonie Watson, Adrian Bateman</td>
           </tr>
           <tr>
             <th colspan="1" rowspan="1">Team Contacts <br />
@@ -629,7 +629,7 @@ during their development.
         Art Barstow, Chair <br />
         Leonie Watson, Chair <br />
         Adrian Bateman, Chair <br />
-        Charles McCathieNevile, Chair </address>
+        Charles McCathie Nevile, Chair </address>
       <p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright"
           rel="Copyright">Copyright</a>©
         2015 <a href="http://www.w3.org/"><abbr title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup>
