Tweaks to WebApps charter

--- a/group-charter.html
+++ b/group-charter.html
@@ -400,8 +400,7 @@ potential accessibility aspects, and to ensure coordination as needed
 during their development.
         </p>
 
-        <p>The specifications of several other groups, such as <a href="http://www.w3.org/html/wg/">HTML</a>
-          and <a href="http://www.w3.org/Graphics/SVG"> SVG</a>, depend upon
+        <p>The specifications of several other groups, such as <a href="http://www.w3.org/Graphics/SVG"> SVG</a>, depend upon
           particular Web Applications Working Group specifications.
           Where possible, additional dependencies will be
           avoided to prevent the disruption of dependent deliverables. </p>
