Added HTML5.0 as maintenance

--- a/group-charter.html
+++ b/group-charter.html
@@ -324,6 +324,7 @@
           <li id='webmessaging'><a href="http://www.w3.org/TR/webmessaging/">Web
               Messaging</a></li>
                <li id='sse'><a href="http://dev.w3.org/html5/eventsource/">Server-sent Events</a></li>
+          <li id="html50"><a href="http://www.w3.org/TR/html5/">HTML 5.0</a></li>
                <li><a href="http://www.w3.org/TR/html-longdesc/">HTML5 Image Description Extension</a></li>
           <li id="widgets-apis">
 	     <a href="http://www.w3.org/TR/widgets-apis/">Widget Interface</a></li>
