fixed acc spec info/links

--- a/group-charter.html
+++ b/group-charter.html
@@ -213,10 +213,12 @@
               </dd>
               <dt><a href="http://www.w3.org/TR/2dcontext/">HTML Canvas 2D Context</a></dt>
               <dd>An API for the 2D Context of the HTML canvas element.</dd>
-              <dt><a href="http://dvcs.w3.org/hg/html-api-map/raw-file/tip/Overview.html">HTML to Platform Accessibility APIs Implementation Guide</a></dt>
-              <dd>This specification provides a mapping HTML elements and attributes to accessibility API Roles, States and Properties on a variety of platforms. This work is jointly done with the Protocols and Formats Working Group.</dd>
-              <dt><a href="http://www.w3.org/TR/aria-in-html/">Using WAI-ARIA in HTML</a></dt>
-              <dd>This specification defines the web developer rules for the use of WAI ARIA attributes on HTML elements. This work is jointly done with the Protocols and Formats Working Group.</dd>
+              <dt><a href="http://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility API Mappings 1.0</a></dt>
+              <dd>This specification defines how user agents map <abbr title="HyperText Markup Language">HTML</abbr>  elements and attributes to platform accessibility application programming interfaces (<abbr title="Application Programming Interfaces">APIs</abbr>).  This work is jointly done with the Protocols and Formats Working Group.</dd>
+              <dt><a href="http://www.w3.org/TR/html-aria/">ARIA in HTML</a></dt>
+              <dd>This specification defines the web developer rules for the use of ARIA attributes on HTML elements. </dd>
+              <dt><a href="http://www.w3.org/TR/html-aria/">Notes on Using ARIA in HTML</a></dt>
+              <dd>This document is a practical guide for developers on how to add       accessibility information to HTML elements using the       Accessible Rich Internet Applications specification (WAI-ARIA). This work is jointly done with the Protocols and Formats Working Group.</dd>
             </dl>
           </dd>
           <dt><a href="https://w3c.github.io/ime-api/">Input
