fixed leonie's name

--- a/group-charter.html
+++ b/group-charter.html
@@ -80,7 +80,7 @@
           </tr>
           <tr>
             <th colspan="1" rowspan="1">Chairs</th>
-            <td colspan="1" rowspan="1">Art Barstow, Charles McCathie Nevile, Leonie Watson, Adrian Bateman</td>
+            <td colspan="1" rowspan="1">Art Barstow, Charles McCathie Nevile, L&eacute;onie Watson, Adrian Bateman</td>
           </tr>
           <tr>
             <th colspan="1" rowspan="1">Team Contacts <br />
