fix Léonie's name at the bottom too

--- a/group-charter.html
+++ b/group-charter.html
@@ -627,7 +627,7 @@ during their development.
 	Xiaoqian Wu, Team Contact <br />
   Robin Berjon, Team Contact <br />
         Art Barstow, Chair <br />
-        Leonie Watson, Chair <br />
+        L&eacute;onie Watson, Chair <br />
         Adrian Bateman, Chair <br />
         Charles McCathie Nevile, Chair </address>
       <p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright"
