--- a/group-charter.html
+++ b/group-charter.html
@@ -92,8 +92,8 @@
             <td>Teleconferences: topic-specific calls
               may be held up to once per week<br />
               Face-to-face: we will meet during the W3C's annual Technical
-              Plenary week; other additional F2F meetings may be scheduled (up
-              to 2 per year) <br />
+              Plenary week; other F2F meetings may be scheduled (up
+              to 2 per year for the full group, plus up to 2 per year for any specific topic) <br />
               IRC: active participants, particularly editors, regularly use the
               #webapps W3C IRC channel </td>
           </tr>
@@ -559,7 +559,7 @@ during their development.
           the group does not hold plenary teleconferences, but does meet face to face at the
           TP/AC. It may hold more meetings, and certain specifications are
           developed with regular teleconferences. Note the <a href="#decisions">Decision
-            Policy</a> below with regards to synchronous meetings. </p>
+            Policy</a> below with regards to meetings. </p>
         <p>
         The Working Group <strong>conduct their work primarily through github repositories</strong>,
         for contributions and communications. Discourse may be used for broad discussions with the community.
