--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -28,7 +28,7 @@
     the <a href="http://www.w3.org/2006/rwc/">Rich Web Client Activity</a>, is to
     further develop timed media capabilities in the Open Web Platform, including but not limited to video and audio features.</p>
 
-    <p>The Timed Media Working Group will expand upon the basic capabilities provided by HTML5's <code>&lt;audio&gt;</code> and <code>&lt;video&gt;</code> media elements as well as develop lower level APIs that provide the foundation for featires developed by the Audio Working Group, the WebRTC Working Group, and others.</p>
+    <p>The Timed Media Working Group will expand upon the basic capabilities provided by HTML5's <code>&lt;audio&gt;</code> and <code>&lt;video&gt;</code> media elements as well as develop lower level APIs that provide the foundation for features developed by the Audio Working Group, the WebRTC Working Group, and others.</p>
 
     <div class="noprint">
     <p class="join"><a href="#">Join the
