New proposals should be incubated first.

--- a/group-charter.html
+++ b/group-charter.html
@@ -303,6 +303,12 @@
           under this charter. Specifications may be moved to Recommendation and
           a subsequent version begun in order to facilitate the progress of
           other work which depends on a stable reference.</p>
+        <p>The Working Group will not adopt new proposals until they have
+          matured through the <a href="incubator-cg-charter.html">Web Platform
+          Incubator Community Group</a> or another similar incubation phase. If
+          the Working Group decides to add new Recommendation-track deliverables
+          then it will recharter with changes to that new charter limited to
+          just the changes in deliverables.</p>
         <p>For a detailed summary of the current list of deliverables, and an
           up-to-date timeline, see the WebApps WG <a title="PubStatus - WEBAPPS"
             href="http://www.w3.org/2008/webapps/wiki/PubStatus">Publication
