--- a/group-charter.html
+++ b/group-charter.html
@@ -137,7 +137,7 @@
       <div class="deliverables">
         <h2 id="deliverables">Deliverables</h2>
         <h3 id="rec-track">Recommendation-Track Deliverables</h3>
-        <p>The working group will deliver at least the following:</p>
+        <p>The working group will deliver the following W3C Recommendations:</p>
         <dl>
           <dt id="clipops"><a href="https://w3c.github.io/clipboard-apis/">Clipboard
               API and events</a></dt>
