--- a/group-charter.html
+++ b/group-charter.html
@@ -104,14 +104,14 @@
         <p>The Web Applications Working Group will:</p>
         <ul>
           <li>continue the development of the HTML language, and associated APIs;</li>
-          <li>ensure that developers can use Web technologies to build client-side applications and are relying on Web engines as application runtime environments;</li>
+          <li>ensure that developers can use Web technologies to build client-side applications that rely on Web engines as application runtime environments;</li>
           <li>provide generic and consistent interoperability and integration among all target formats, such as HTML, CSS, and SVG.</li>
           <li>continue to define normative requirements for applications that process HTML resources, including (but not limited to) browsers and other interactive user agents, as well as authoring tools, markup generators, and conformance checkers;</li>
           <li>ensure universal access to Web applications across a wide range of devices and among a diversity of users, by addressing issues of accessibility, device independence, internationalization, mobility, privacy, and security.</li>
         </ul>
 
         <p>
-           The Web Applications Working Group will rely on modularity as a key part of the development of the HTML language, allowing extension specifications to define new elements, new attributes, new values for attributes that accept defined sets of keywords, and new APIs. Those extension specifications may be achieved within the Web Applications Working Group or other Groups.
+           The Web Applications Working Group will rely on modularity as a key part of the development of the HTML language, allowing extension specifications to define new elements, new attributes, new values for attributes that accept defined sets of keywords, and new APIs. Those extension specifications may be defined within the Web Applications Working Group or other Groups.
         </p>
       <div>
         <h3 id="success">Success Criteria</h3>
@@ -175,7 +175,7 @@
                 was initially developed in the WHAT-WG. </dd>
                 <dt><a href="https://w3c.github.io/DOM-Level-3-Events-code/">DOM Level 3 KeyboardEvent code Values</a></dt>
                 <dd>
-                A specification describing contains about the key event that can use used identify the physical key being pressed by the user.
+                A specification describing information that can use used identify the physical key being pressed by the user.
                 </dd>
                 <dt><a href="https://w3c.github.io/DOM-Level-3-Events-key/">DOM Level 3 KeyboardEvent key Values</a></dt>
                 <dd>
