--- a/group-charter.html
+++ b/group-charter.html
@@ -191,7 +191,7 @@
               <dt id="file-api"><a title="File API" href="https://w3c.github.io/FileAPI/">File
                   API</a></dt>
               <dd>An API that enables web applications to select file objects
-                and accessing their data. This replaces the File Upload
+                and access their data. This replaces the File Upload
                 specification.</dd>
               <dt id="file-system-2"><a href="http://w3c.github.io/filesystem-api/Overview.html">FileSystem
                   API</a></dt>
