Added background sync

--- a/group-charter.html
+++ b/group-charter.html
@@ -155,6 +155,8 @@
               <dd>Service Workers are a new feature for the web platform that lets a
 		script persistently cache resources and handle all resource requests
 		for an application -- even when the network isn't available.</dd>
+              <dt><a href="https://slightlyoff.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
+              <dd>This specification describes a method that enables web applications to synchronize data when next online.</dd>
             </dl>
           </dd>
           <dt id="dom">Document Object Model (DOM)</dt>
@@ -252,8 +254,6 @@
 		<dd>Defines APIs for linking to a document selection, even when the document
 		has changed. This may be a joint deliverable with the proposed Web
 		Annotations WG.</dd>
-               <dt><a href="https://w3c.github.io/push-api/index.html">Push API</a></dt>
-               <dd>An API that provides web applications scripted access to server-sent notifications.</dd>
           <dt id="screen-orientation"><a href="https://w3c.github.io/screen-orientation/">Screen Orientation API</a></dt>
           <dd>A view orientation and locking API e.g. to enable reading the
             view's orientation state, locking view orientation, notification of
@@ -290,18 +290,12 @@
           <dt id="webidl"><a href="http://heycam.github.io/webidl/">Web Interface
               Definition Language (Web IDL)</a></dt>
           <dd>Language bindings and types for Web interface descriptions.</dd>
-          <dt>Workers</dt>
-          <dd>
-            <dl>
-            <dt id="web-workers"><a title="Web Workers" href="http://dev.w3.org/html5/workers/">Web
-                Workers</a></dt>
-            <dd>An API that allows Web application authors to spawn background
-              workers running scripts in parallel to their main page, allowing for
-              thread-like operation with message-passing as the coordination
-              mechanism.</dd>
-            <dt><a href="http://slightlyoff.github.io/ServiceWorker/spec/service_worker/">Service Workers</a></dt>
-            <dd>Describe a method to enable Web applications to take advantage of persistent background processing</dd>
-            </dl>
+          <dt id="web-workers"><a title="Web Workers" href="http://dev.w3.org/html5/workers/">Web
+             Workers</a></dt>
+          <dd>An API that allows Web application authors to spawn background
+            workers running scripts in parallel to their main page, allowing for
+            thread-like operation with message-passing as the coordination
+            mechanism.</dd>
           </dd>
         </dl>
         <p>Each specification should contain a section detailing any known
