--- a/group-charter.html
+++ b/group-charter.html
@@ -218,8 +218,8 @@
               <dd>This specification defines how user agents map <abbr title="HyperText Markup Language">HTML</abbr>  elements and attributes to platform accessibility application programming interfaces (<abbr title="Application Programming Interfaces">APIs</abbr>).  This work is jointly done with the Protocols and Formats Working Group.</dd>
               <dt><a href="http://www.w3.org/TR/html-aria/">ARIA in HTML</a></dt>
               <dd>This specification defines the web developer rules for the use of ARIA attributes on HTML elements. </dd>
-              <dt><a href="http://www.w3.org/TR/html-aria/">Notes on Using ARIA in HTML</a></dt>
-              <dd>This document is a practical guide for developers on how to add       accessibility information to HTML elements using the       Accessible Rich Internet Applications specification (WAI-ARIA). This work is jointly done with the Protocols and Formats Working Group.</dd>
+              <dt><a href="http://www.w3.org/TR/aria-in-html/">Notes on Using ARIA in HTML</a></dt>
+              <dd>This document is a practical guide for developers on how to add accessibility information to HTML elements using the Accessible Rich Internet Applications specification (WAI-ARIA). This work is jointly done with the Protocols and Formats Working Group.</dd>
             </dl>
           </dd>
           <dt><a href="https://w3c.github.io/ime-api/">Input
